[project]
name = "PyNoine"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["pynonie"]

[tool.pylint.format]
max-line-length = 127