[project]
name = "nonie_server"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "Flask",
    "Flask-RESTful"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["nonie_server"]

[tool.pylint.format]
max-line-length = 127